# farm-ng-amiga-3.0

./: .gitignore  README.md  justfile
farm_ng_adk/: setup.cfg  setup.py
farm_ng_adk/protos/farm_ng/hal/: imu.proto
farm_ng_adk/protos/farm_ng/nexus/: amiga_state.proto  fundamentals.proto  implement.proto  job.proto  navigation.proto  nexus.proto  nodo_configure.proto  recorder.proto  teleop.proto  tweak.proto  video_streaming.proto  world_model.proto
farm_ng_adk/py/farm_ng/: __init__.py  amiga.py  helpers.py  nexus_client.py  nodo_client.py  track_follower_client.py
farm_ng_adk/py/farm_ng/examples/: camera_settings.py  circle_track.py  demo_script.py  feedback.py  gps_visualizer.py  hal.py  record.py  square_track.py  stream.py  stream_decode.py  teleop.py  tool_control.py  track_follower.py  track_follower_application_track.py  track_follower_legacy.py  track_follower_pause_resume.py  track_recorder.py
farm_ng_adk/py/farm_ng/nexus/: __init__.py
