[metadata]
name = farm-ng-adk
version = 0.1.0
description = farm-ng's Amiga Development Kit (ADK)
author = farm-ng Inc.
author_email = info@farm-ng.com
keywords = farming, robotics, open-source
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.9
setup_requires =
    wheel

install_requires =
    pynng==0.8.1
    protobuf==5.29.3
    grpcio==1.70.0
    farm_ng_package==0.1.0
    lz4==4.3.2
    numpy>=1.12.0
    av>=10.0.0
    pycairo>=1.20.0
    PyGObject>=3.36.0

package_dir =
    = py

packages =
    farm_ng
    farm_ng.nexus

[options.package_data]
nexus =
    *.proto
